# todolist

./: .coverage  todolist.py
todolist_package/: LICENSE  README.md  pyproject.toml
todolist_package/src/todolist_CAGray/: todo.py  todolist.py
todolist_package/src/todolist_CAGray.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
todolist_package/tests/: test_todolist.py
